tests/auto/qml/qqmlecmascript/data/Lib.js
@@ -1,0 +1,3 @@
+.pragma library
+
+function f() { return 42 }
